javali_tests/HW1/HelloWorld.javali
/* Kind of like hello world */
class Main {
   int a;
   void main() {
     int a;
     B b;
     b = new B();
     a=b;
     a = 5;
     // write(53110);
     // writeln();    
   }
}
class B{

}
